# opentelemetry-prometheus-multiprocess

./: CHANGES.rst  README.rst  pyproject.toml
docs/changelog/: fwcompat.change  histogram.change  labels.change  naming.change  otel.change
src/opentelemetry/sdk/extension/prometheus_multiprocess/: __init__.py  provider.py
